header, regirster modifications

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -6,19 +6,19 @@
         <div class="col-5">
             <ul class="list-group list-group-horizontal">
                 <li class="list-group-item border-0 bg-transparent cursor-pointer">
-                    <a routerLink="home">Home</a>
+                    <a routerLink="home" routerLinkActive="active">Home</a>
                 </li>
                 <li class="list-group-item border-0 bg-transparent cursor-pointer">
-                    <a>Cart</a>
+                    <a routerLinkActive="active">Cart</a>
                 </li>
                 <li class="list-group-item border-0 bg-transparent cursor-pointer">
-                    <a>Product</a>
+                    <a routerLinkActive="active">Product</a>
                 </li>
                 <li class="list-group-item border-0 bg-transparent cursor-pointer">
-                    <a>Categories</a>
+                    <a routerLinkActive="active">Categories</a>
                 </li>
                 <li class="list-group-item border-0 bg-transparent cursor-pointer">
-                    <a>Brands</a>
+                    <a routerLinkActive="active">Brands</a>
                 </li>
             </ul>
         </div>
