--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container">
+  <app-home-slider></app-home-slider>
+  <app-category-slider></app-category-slider>
+      <input class="form-control my-4" type="text" placeholder="Search by Product Name">
+  <div class="row">
+    <div *ngFor="let product of products" class="col-md-3">
+      <app-product-info [product]="product" [userWishlist]="wishListService.userWishlist"></app-product-info>
+    </div>
+  </div>
+</div>
