--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,12 +1,17 @@
 <div class="container my-5">
     <h3>Login:</h3>
-    <div [formGroup]="loginForm">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
         <small>Email</small>
         <input type="email" [formControlName]="'email'" class="form-control">
         <small>Password</small>
         <input type="password" [formControlName]="'password'" class="form-control">
-        <div class="row justify-content-end">
-            <button class="btn bg-main text-center text-white col-1 mt-3" [disabled]="!loginForm.valid">Login</button>
+        <div class="d-flex justify-content-between align-items-baseline">
+            <a [routerLink]="'/forget-password'">Forget Password?</a>
+            <button type="submit" class="btn bg-main text-center text-white ms-auto d-block mt-3"
+                [disabled]="!loginForm.valid || isLoading">
+                <span *ngIf="!isLoading">Login</span>
+                <span *ngIf="isLoading"><i class="fa fa-spinner fa-spin"></i></span>
+            </button>
         </div>
-    </div>
+    </form>
 </div>
