--- a/src/app/Components/brand-card/brand-card.component.html
+++ b/src/app/Components/brand-card/brand-card.component.html
@@ -1,4 +1,4 @@
-<div class="card cursor-pointer brand-card">
+<div class="card cursor-pointer brand-card" (click)="onGetBrandInfo()">
     <img [src]="brand.image" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title text-center">{{brand.name}}</h5>
