--- a/src/app/Components/all-orders/all-orders.component.html
+++ b/src/app/Components/all-orders/all-orders.component.html
@@ -59,7 +59,7 @@
                           <div class="ms-2 me-auto">
                             <div class="fw-bold">Paid At</div>
                             </div>
-                          <span class="badge bg-primary rounded-pill fs-6 text-wrap word-break">{{order.paidAt | date: 'dd/MM/yyyy, h:mm a'}}</span>
+                          <span class="badge bg-primary rounded-pill text-wrap word-break">{{order.paidAt | date: 'dd/MM/yyyy, h:mm a'}}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-start">
                           <div class="ms-2 me-auto">
