--- a/src/app/Components/brand-info/brand-info.component.html
+++ b/src/app/Components/brand-info/brand-info.component.html
@@ -1,6 +1,7 @@
 <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">{{brand.name}}</h4>
-    <button type="button" class="btn-close" aria-label="Close" (click)="''"></button>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modalService.closeModal()"></button>
 </div>
-<div class="modal-body">
+<div class="modal-body text-center">
+    <img [src]="brand.image" alt="">
 </div>
