--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -1,5 +1,5 @@
-<input class="form-control my-4" type="text" placeholder="Search by Product Name">
-  <div class="row">
+<input class="form-control my-4" type="text" placeholder="Search by Product Name" [(ngModel)]="filterValue" (input)="onSearchChange($event)">
+<div class="row">
     <div *ngFor="let product of products" class="col-md-3">
       <app-product-info [product]="product" [userWishlist]="wishListService.userWishlist"></app-product-info>
     </div>
