--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<div class="container">
+<div class="container position-relative">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
+<app-loader></app-loader>
