--- a/src/app/Components/categories/categories.component.html
+++ b/src/app/Components/categories/categories.component.html
@@ -7,5 +7,5 @@
     </div>
 </div>
 
-<app-sub-category-card [subCategory]="{categoryName: categoryName, subCategories: subCategories}"></app-sub-category-card>
+<app-sub-category-card [subCategory]="{categoryName: categoryName, subCategories: subCategories, noSub: noSub!}"></app-sub-category-card>
 
