--- a/src/app/Components/category-slider/category-slider.component.html
+++ b/src/app/Components/category-slider/category-slider.component.html
@@ -12,6 +12,6 @@
       </ng-container>
     </owl-carousel-o>
 
-    <app-sub-category-card [subCategory]="{categoryName: categoryName, subCategories: subCategories}"></app-sub-category-card>
+    <app-sub-category-card [subCategory]="{categoryName: categoryName, subCategories: subCategories, noSub: noSub}"></app-sub-category-card>
 
   </div>
