--- a/src/app/Components/wishlist-list/wishlist-list.component.html
+++ b/src/app/Components/wishlist-list/wishlist-list.component.html
@@ -7,7 +7,7 @@
             </div>
         </ng-container>
         <ng-template #NoItemsInTheWishList>
-            <h4 class="text-center fst-italic bg-light p-5 m-5 border">No products in you wishlist</h4>
+            <h4 class="text-center fst-italic bg-light p-5 m-5 border">No products in your wishlist</h4>
         </ng-template>
     </div>
 </div>
