--- a/src/app/Components/forget-password/forget-password.component.html
+++ b/src/app/Components/forget-password/forget-password.component.html
@@ -1,5 +1,7 @@
-<h2>Please enter your email to reset its password</h2>
-<form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
-    <input type="email" class="form-control" [formControlName]="'email'">
-    <button class="btn bg-main text-white" [disabled]="!resetPasswordForm.valid">Send Verification Code</button>
-</form>
+<div class="container my-5">
+    <h2 class="mb-4">Please enter your email to reset its password</h2>
+    <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
+        <input type="email" class="form-control mb-3" placeholder="Enter your email" [formControlName]="'email'">
+        <button class="btn bg-main text-white ms-auto d-block" [disabled]="!resetPasswordForm.valid">Send Verification Code</button>
+    </form>
+</div>
