--- a/src/app/Components/loader/loader.component.scss
+++ b/src/app/Components/loader/loader.component.scss
@@ -1,9 +1,21 @@
-.overlay{
-    z-index: 999;
-    background-color: aqua;
-    position: absolute;
-    top: 0;
+.my-overlay {
     left: 0;
+    top: 0;
+    z-index: 1056;
     width: 100%;
     height: 100%;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all .5s ease-in-out;
+    overflow: hidden;
+
+    &.h-0 {
+        height: 0;
+    }
+
+    i.fa.fa-spinner.fa-spin {
+        font-size: 80px;
+    }
 }
