--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -2,9 +2,9 @@
     <h3>Login:</h3>
     <form [formGroup]="loginForm" (ngSubmit)="login()">
         <small>Email</small>
-        <input type="email" [formControlName]="'email'" class="form-control">
+        <input type="email" [formControlName]="'email'" class="form-control mb-3" placeholder="Please enter your email">
         <small>Password</small>
-        <input type="password" [formControlName]="'password'" class="form-control">
+        <input type="password" [formControlName]="'password'" class="form-control mb-3" placeholder="Please enter your password">
         <div class="d-flex justify-content-between align-items-baseline">
             <a [routerLink]="'/forget-password'">Forget Password?</a>
             <button type="submit" class="btn bg-main text-center text-white ms-auto d-block mt-3"
