--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -1,10 +1,10 @@
 <div class="container my-5">
-    <h3>Reset your account password</h3>
+    <h3 class="mb-4">Reset your account password</h3>
     <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
         <small>Email</small>
-        <input type="email" [formControlName]="'email'" class="form-control">
+        <input type="email" [formControlName]="'email'" class="form-control mb-3">
         <small>Password</small>
-        <input type="password" [formControlName]="'newPassword'" class="form-control">
+        <input type="password" [formControlName]="'newPassword'" class="form-control mb-3">
         <button type="submit" class="btn bg-main text-center text-white ms-auto d-block mt-3"
         [disabled]="!resetPasswordForm.valid">Reset Password</button>
     </form>
