--- a/src/app/Components/loader/loader.component.html
+++ b/src/app/Components/loader/loader.component.html
@@ -1,3 +1,3 @@
 <div class="my-overlay bg-dark loader-overlay" [ngClass]="{'h-0': !loaderService.loadingVisible}">
-    <i class="fa fa-spinner fa-spin loader-spinner text-white" aria-hidden="true"></i>
+    <i class="fa fa-spinner fa-spin loader-spinner" aria-hidden="true"></i>
   </div>
