--- a/src/app/Components/loader/loader.component.scss
+++ b/src/app/Components/loader/loader.component.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     transition: all .5s ease-in-out;
     overflow: hidden;
+    background-color: rgb(229, 230, 228);
 
     &.h-0 {
         height: 0;
